issue resolved images rendering problem

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <!--  first section -->
             <div class="company-title-section section-center">
                 <div class="company-title-section__logo-div">
-                    <img src="/images/logo-mastercraft.svg" alt="Company logo"
+                    <img src="./images/logo-mastercraft.svg" alt="Company logo"
                         class="company-title-section__company-logo">
                 </div>
                 <div class="company-title-section__header">
