--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
             </section>
 
             <!-- second section ends -->
+            <!-- third section  -->
+
 
             <section class="about section-center">
                 <div class="about-project">
@@ -103,49 +105,139 @@
                 <div class="pledge-section">
                     <div class="pledge-section__products row-1">
                         <div class="col">
-                            <p class="col--heading-primary">Bamboo Stand</p>
-                            <p class="col--min-pledge-amount">Pledge $25 or more</p>
+                            <p class="heading-primary">Bamboo Stand</p>
+                            <p class="min-pledge-amount">Pledge $25 or more</p>
                         </div>
                         <p class="paragraph">You get an ergonomic stand made of natural bamboo. You've helped us launch
                             our promotional campaign, and
                             you’ll be added to a special Backer member list.</p>
                         <div class="col">
-                            <p class="col--heading-secondry">101</p>
-                            <button class="col--btn-secondry">Select Reward</button>
+                            <p class="heading-secondry">101 <span class="span">left</span></p>
+                            <button class="btn-secondry">Select Reward</button>
                         </div>
                     </div>
                     <div class="pledge-section__products row-2">
                         <div class="col">
-                            <p class="col--heading-primary">Black Edition Stand</p>
-                            <p class="col--min-pledge-amount">Pledge $75 or more</p>
+                            <p class="heading-primary">Black Edition Stand</p>
+                            <p class="min-pledge-amount">Pledge $75 or more</p>
                         </div>
                         <p class="paragraph">You get a Black Special Edition computer stand and a personal thank you.
                             You’ll be added to our Backer
                             member list. Shipping is included.</p>
                         <div class="col">
-                            <p class="col--heading-secondry">64</p>
-                            <button class="col--btn-secondry">Select Reward</button>
+                            <p class="heading-secondry">64 <span class="span">left</span></p>
+                            <button class="btn-secondry">Select Reward</button>
                         </div>
                     </div>
                     <div class="pledge-section__products row-3">
                         <div class="col">
-                            <p class="col--heading-primary">Mahogany Special Edition</p>
-                            <p class="col--min-pledge-amount">Pledge $200 or more</p>
+                            <p class="heading-primary">Mahogany Special Edition</p>
+                            <p class="min-pledge-amount">Pledge $200 or more</p>
                         </div>
                         <p class="paragraph">You get two Special Edition Mahogany stands, a Backer T-Shirt, and a
                             personal thank you. You’ll be added
                             to our Backer member list. Shipping is included</p>
                         <div class="col">
-                            <p class="col--heading-secondry">0</p>
-                            <button class="col--btn-secondry">Out of Stock</button>
+                            <p class="heading-secondry">0 <span class="span">left</span></p>
+                            <button class="btn-secondry btn-opacity">Out of Stock</button>
                         </div>
                     </div>
                 </div>
             </section>
+
+            <!-- third section ends -->
+
+
+
+
+
+            <!-- modal container -->
+
+            <section class="modal-container section-center">
+                <div class="modal">
+                    <div class="modal__header">
+                        <p class="heading-primary">Back this project</p>
+                        <p class="paragraph ">Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the
+                            world?</p>
+                    </div>
+                    <div class="modal__column">
+                        <div class="modal__top">
+                            <div class="modal__inner">
+                                <div class="radio">
+                                    <input type="radio" class="modal__radio">
+                                </div>
+                                <p class="heading-primary">Pledge with no reward</p>
+
+                            </div>
+                            <p class="paragraph modal-paragraph">Choose to support us without a reward if you simply
+                                believe
+                                in our project.
+                                As a backer,
+                                you will be signed up to receive product updates via email.</p>
+                        </div>
+                        <div class="modal__bottom">
+                            <div class="btn-align">
+
+                                <button class="btn-secondry modal__btn">Continue</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal__column">
+                        <div class="modal__top">
+
+                            <div class="modal__inner">
+
+
+                                <div class="radio">
+                                    <input type="radio" class="modal__radio">
+                                </div>
+                                <div class="flex">
+                                    <p class="heading-primary">Bamboo Stand</p>
+                                    <p class="min-pledge-amount">Pledge $25 or more</p>
+                                </div>
+                                <p class="heading-secondry modal__sub-heading">101 <span class="span">left</span>
+                                </p>
+                            </div>
+
+                            <p class="paragraph modal-paragraph">You get an ergonomic stand made of natural bamboo.
+                                You've helped us launch
+                                our promotional campaign, and
+                                you’ll be added to a special Backer member list.</p>
+                        </div>
+                        <div class="modal__bottom">
+                            <div class="submit-form">
+                                <p class="modal__text">Enter your pledge</p>
+                                <div class="pledge-form">
+                                    <div class="modal__form">
+                                        <input type="text" class="modal__input" value="25">
+
+                                    </div>
+                                    <button class="btn-secondry modal__btn">Continue</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+
+            </section>
+
+
+
+
+            <!-- modal container ends -->
+
+
+
+
+
         </div>
-
-
-
 
 
     </main>
