--- a/index.html
+++ b/index.html
@@ -155,19 +155,24 @@
 
             <section class="modal-container section-center">
                 <div class="modal">
+
+                    <div class="modal__logo-box">
+                        <img src="./images/icon-close-modal.svg" alt="close icon" class="modal__close-img">
+                    </div>
+
                     <div class="modal__header">
-                        <p class="heading-primary">Back this project</p>
+                        <p class="heading-primary modal__heading">Back this project</p>
                         <p class="paragraph ">Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the
                             world?</p>
                     </div>
                     <div class="modal__column">
                         <div class="modal__top">
                             <div class="modal__inner">
-                                <div class="radio">
-                                    <input type="radio" class="modal__radio">
+                                <div class="form-group">
+                                    <div class="modal__radio"></div>
                                 </div>
-                                <p class="heading-primary">Pledge with no reward</p>
 
+                                <p class="heading-primary">Pledge with no reward</p>
                             </div>
                             <p class="paragraph modal-paragraph">Choose to support us without a reward if you simply
                                 believe
@@ -177,7 +182,6 @@
                         </div>
                         <div class="modal__bottom">
                             <div class="btn-align">
-
                                 <button class="btn-secondry modal__btn">Continue</button>
                             </div>
                         </div>
@@ -188,8 +192,8 @@
                             <div class="modal__inner">
 
 
-                                <div class="radio">
-                                    <input type="radio" class="modal__radio">
+                                <div class="form-group">
+                                    <div class="modal__radio"></div>
                                 </div>
                                 <div class="flex">
                                     <p class="heading-primary">Bamboo Stand</p>
@@ -216,6 +220,63 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="modal__column">
+                        <div class="modal__top">
+
+                            <div class="modal__inner">
+
+
+                                <div class="form-group">
+                                    <div class="modal__radio"></div>
+                                </div>
+                                <div class="flex">
+                                    <p class="heading-primary">Black Edition Stand</p>
+                                    <p class="min-pledge-amount">Pledge $75 or more</p>
+                                </div>
+                                <p class="heading-secondry modal__sub-heading">64 <span class="span">left</span>
+                                </p>
+                            </div>
+
+                            <p class="paragraph modal-paragraph">You get a Black Special Edition computer stand and a
+                                personal thank you. You’ll be added to our Backer
+                                member list. Shipping is included.</p>
+                        </div>
+                        <div class="modal__bottom">
+                            <div class="submit-form">
+                                <p class="modal__text">Enter your pledge</p>
+                                <div class="pledge-form">
+                                    <div class="modal__form">
+                                        <input type="text" class="modal__input" value="75">
+
+                                    </div>
+                                    <button class="btn-secondry modal__btn">Continue</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal__column row-3">
+                        <div class="modal__top">
+
+                            <div class="modal__inner">
+
+
+                                <div class="form-group">
+                                    <div class="disabled"></div>
+                                </div>
+                                <div class="flex">
+                                    <p class="heading-primary">Mahogany Special Edition</p>
+                                    <p class="min-pledge-amount">Pledge $200 or more</p>
+                                </div>
+                                <p class="heading-secondry modal__sub-heading">0 <span class="span">left</span>
+                                </p>
+                            </div>
+
+                            <p class="paragraph modal-paragraph">You get two Special Edition Mahogany stands, a Backer
+                                T-Shirt, and a personal thank you. You’ll be added
+                                to our Backer member list. Shipping is included.</p>
+                        </div>
+
                     </div>
                 </div>
 
