adding open close functionality to modal

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                         reduce neck and eye strain.</p>
                 </div>
                 <div class="company-title-section__btns">
-                    <button type="button" class="company-title-section__btns--btn1">Back this project</button>
+                    <button type="button" class="company-title-section__btns--btn1 modal-open">Back this
+                        project</button>
                     <button type="button" class="company-title-section__btns--btn2" id="bookmark-btn">
                         <svg width="56" height="56" xmlns="http://www.w3.org/2000/svg">
                             <g fill="none" fill-rule="evenodd">
@@ -113,7 +114,7 @@
                             you’ll be added to a special Backer member list.</p>
                         <div class="col">
                             <p class="heading-secondry">101 <span class="span">left</span></p>
-                            <button class="btn-secondry">Select Reward</button>
+                            <button class="btn-secondry modal-open">Select Reward</button>
                         </div>
                     </div>
                     <div class="pledge-section__products row-2">
@@ -126,7 +127,7 @@
                             member list. Shipping is included.</p>
                         <div class="col">
                             <p class="heading-secondry">64 <span class="span">left</span></p>
-                            <button class="btn-secondry">Select Reward</button>
+                            <button class="btn-secondry modal-open">Select Reward</button>
                         </div>
                     </div>
                     <div class="pledge-section__products row-3">
@@ -153,11 +154,12 @@
 
             <!-- modal container -->
 
-            <section class="modal-container section-center">
-                <div class="modal">
+            <section class="modal-container ">
+                <div class="modal section-center">
 
                     <div class="modal__logo-box">
-                        <img src="./images/icon-close-modal.svg" alt="close icon" class="modal__close-img">
+                        <img src="./images/icon-close-modal.svg" alt="close icon" class="modal__close-img"
+                            id="closeImg">
                     </div>
 
                     <div class="modal__header">
