--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     </div>
 
                     <div class="modal__header">
-                        <p class="heading-primary modal__heading">Back this project</p>
+                        <p class="heading-primary modal__header">Back this project</p>
                         <p class="paragraph ">Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the
                             world?</p>
                     </div>
@@ -174,7 +174,7 @@
                                     <div class="modal__radio"></div>
                                 </div>
 
-                                <p class="heading-primary">Pledge with no reward</p>
+                                <p class="heading-primary modal__heading">Pledge with no reward</p>
                             </div>
                             <p class="paragraph modal-paragraph">Choose to support us without a reward if you simply
                                 believe
@@ -198,7 +198,7 @@
                                     <div class="modal__radio"></div>
                                 </div>
                                 <div class="flex">
-                                    <p class="heading-primary">Bamboo Stand</p>
+                                    <p class="heading-primary modal__heading">Bamboo Stand</p>
                                     <p class="min-pledge-amount">Pledge $25 or more</p>
                                 </div>
                                 <p class="heading-secondry modal__sub-heading">101 <span class="span">left</span>
@@ -233,7 +233,7 @@
                                     <div class="modal__radio"></div>
                                 </div>
                                 <div class="flex">
-                                    <p class="heading-primary">Black Edition Stand</p>
+                                    <p class="heading-primary modal__heading">Black Edition Stand</p>
                                     <p class="min-pledge-amount">Pledge $75 or more</p>
                                 </div>
                                 <p class="heading-secondry modal__sub-heading">64 <span class="span">left</span>
