--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="funds">
 
                     <div class="funds__header">
-                        <p class="funds__header--section-heading" id="fundedAmount">$89,914</p>
+                        <p class="funds__header--section-heading" id="fundedAmount">89,914</p>
                         <p class="funds__header--text" id="needed"> of $100,000 backed</p>
                     </div>
                     <div class="funds__header">
@@ -108,7 +108,7 @@
                             our promotional campaign, and
                             you’ll be added to a special Backer member list.</p>
                         <div class="col">
-                            <p class="heading-secondry">101 <span class="span">left</span></p>
+                            <p class="heading-secondry reward-left-bamboo">101 <span class="span">left</span></p>
                             <button class="btn-secondry" id="bambooBtn">Select Reward</button>
                         </div>
                     </div>
@@ -121,10 +121,13 @@
                             You’ll be added to our Backer
                             member list. Shipping is included.</p>
                         <div class="col">
-                            <p class="heading-secondry">64 <span class="span">left</span></p>
+                            <p class="heading-secondry reward-left-black
+                            ">64 <span class="span">left</span></p>
                             <button class="btn-secondry" id="blackEditionBtn">Select Reward</button>
                         </div>
                     </div>
+
+
                     <div class="pledge-section__products row-3">
                         <div class="col">
                             <p class="heading-primary">Mahogany Special Edition</p>
@@ -196,7 +199,8 @@
                                     <p class="heading-primary modal__heading">Bamboo Stand</p>
                                     <p class="min-pledge-amount">Pledge $25 or more</p>
                                 </div>
-                                <p class="heading-secondry modal__sub-heading">101 <span class="span">left</span>
+                                <p class="heading-secondry modal__sub-heading reward-left-bamboo">101 <span
+                                        class="span">left</span>
                                 </p>
                             </div>
 
@@ -210,7 +214,7 @@
                                 <p class="modal__text">Enter your pledge</p>
                                 <form action="#" id="bamboo-form">
                                     <div class="modal__form">
-                                        <input type="text" class="modal__input" id="bamboo-input" value="25">
+                                        <input type="number" class="modal__input" id="bamboo-input" value="25">
                                     </div>
                                     <button type="submit" class="btn-secondry modal__btn">Continue</button>
                                 </form>
@@ -228,8 +232,8 @@
                                     <p class="heading-primary modal__heading">Black Edition Stand</p>
                                     <p class="min-pledge-amount">Pledge $75 or more</p>
                                 </div>
-                                <p class="heading-secondry modal__sub-heading" id="reward-count">64 <span
-                                        class="span">left</span>
+                                <p class="heading-secondry modal__sub-heading reward-left-black" id="reward-count">64
+                                    <span class="span">left</span>
                                 </p>
                             </div>
 
@@ -242,7 +246,7 @@
                                 <p class="modal__text">Enter your pledge</p>
                                 <form action="#" id="black-edition-form">
                                     <div class="modal__form">
-                                        <input type="text" class="modal__input" id="blackEdition-input" value="75"
+                                        <input type="number" class="modal__input" id="blackEdition-input" value="75"
                                             id="input-modal">
                                     </div>
                                     <button class="btn-secondry modal__btn">Continue</button>
