adding rewards from input

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="funds">
 
                     <div class="funds__header">
-                        <p class="funds__header--section-heading" id="fundedAmount">89914</p>
+                        <p class="funds__header--section-heading" id="fundedAmount">$89914</p>
                         <p class="funds__header--text" id="needed"> of $100,000 backed</p>
                     </div>
                     <div class="funds__header">
@@ -108,7 +108,9 @@
                             our promotional campaign, and
                             you’ll be added to a special Backer member list.</p>
                         <div class="col">
-                            <p class="heading-secondry reward-left-bamboo">101 <span class="span">left</span></p>
+                            <p class="heading-secondry reward-left-bamboo reward-left">101
+                                <span class="span">left</span>
+                            </p>
                             <button class="btn-secondry" id="bambooBtn">Select Reward</button>
                         </div>
                     </div>
@@ -121,7 +123,7 @@
                             You’ll be added to our Backer
                             member list. Shipping is included.</p>
                         <div class="col">
-                            <p class="heading-secondry reward-left-black
+                            <p class="heading-secondry reward-left-black reward-left
                             ">64 <span class="span">left</span></p>
                             <button class="btn-secondry" id="blackEditionBtn">Select Reward</button>
                         </div>
@@ -199,8 +201,8 @@
                                     <p class="heading-primary modal__heading">Bamboo Stand</p>
                                     <p class="min-pledge-amount">Pledge $25 or more</p>
                                 </div>
-                                <p class="heading-secondry modal__sub-heading reward-left-bamboo">101 <span
-                                        class="span">left</span>
+                                <p class="heading-secondry modal__sub-heading reward-left-bamboo reward-left">101
+                                    <span class="span">left</span>
                                 </p>
                             </div>
 
@@ -214,9 +216,11 @@
                                 <p class="modal__text">Enter your pledge</p>
                                 <form action="#" id="bamboo-form">
                                     <div class="modal__form">
-                                        <input type="number" class="modal__input" id="bamboo-input" value="25">
+                                        <input type="number" class="modal__input" id="bamboo-input" min="25"
+                                            placeholder="25">
                                     </div>
-                                    <button type="submit" class="btn-secondry modal__btn">Continue</button>
+                                    <button type="submit" class="btn-secondry modal__btn"
+                                        id="bambooModalBtn">Continue</button>
                                 </form>
 
                             </div>
@@ -232,7 +236,8 @@
                                     <p class="heading-primary modal__heading">Black Edition Stand</p>
                                     <p class="min-pledge-amount">Pledge $75 or more</p>
                                 </div>
-                                <p class="heading-secondry modal__sub-heading reward-left-black" id="reward-count">64
+                                <p class="heading-secondry modal__sub-heading reward-left-black reward-left"
+                                    id="reward-countnpm">64
                                     <span class="span">left</span>
                                 </p>
                             </div>
@@ -246,10 +251,10 @@
                                 <p class="modal__text">Enter your pledge</p>
                                 <form action="#" id="black-edition-form">
                                     <div class="modal__form">
-                                        <input type="number" class="modal__input" id="blackEdition-input" value="75"
-                                            id="input-modal">
+                                        <input type="number" class="modal__input" id="blackEdition-input" min="75"
+                                            placeholder="75" id="input-modal">
                                     </div>
-                                    <button class="btn-secondry modal__btn">Continue</button>
+                                    <button class="btn-secondry modal__btn" id="blackEditionModalBtn">Continue</button>
                                 </form>
                             </div>
                         </div>
