--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
 
-            <section class="fund-tracking section-center">
+            <div class="fund-tracking section-center">
                 <div class="funds">
 
                     <div class="funds__header">
@@ -79,12 +79,12 @@
                 <div class="funds__range">
                     <div class="funds__range--active"></div>
                 </div>
-            </section>
+            </div>
 
 
 
 
-            <section class="about section-center">
+            <div class="about section-center">
                 <div class="about-project">
                     <p class="heading-primary">About this project</p>
                     <p class="paragraph">The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
 
             <!-- third section ends -->
 
@@ -154,7 +154,7 @@
 
             <!-- modal container -->
 
-            <section class="modal-container ">
+            <div class="modal-container ">
                 <div class="modal section-center">
 
                     <div class="modal__logo-box">
@@ -283,7 +283,7 @@
 
                     </div>
                 </div>
-            </section>
+            </div>
             <div class="thanku-modal">
                 <div class="thanku-modal__content section-center">
 
